# frugally-deep

./: .gitignore  .travis  .travis.yml  CITATION.cff  CMakeLists.txt  FAQ.md  INSTALL.md  LICENSE  README.md  SConstruct  TODO.md  compile.sh  compile_and_run_all.sh  conan_build.py  conanfile.py  conanfile.txt  run_all.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
cmake/: Config.cmake.in  HunterGate.cmake  hunter.cmake  pkgconfig.cmake  toolchain.cmake
examples/gpt2_chat/: CMakeLists.txt  main.cpp
include/fdeep/: base64.hpp  common.hpp  convolution.hpp  convolution3d.hpp  convolution_im2col.hpp  depthwise_convolution.hpp  fdeep.hpp  filter.hpp  import_model.hpp  json.hpp  keras_import.hpp  model.hpp  node.hpp  recurrent_ops.hpp  shape2.hpp  shape2_concrete.hpp  shape2_variable.hpp  shape3.hpp  shape3_concrete.hpp  shape3_variable.hpp  shape5.hpp  shape5_variable.hpp  shape_hw.hpp  shape_hw_variable.hpp  shape_hwc.hpp  shape_hwc_variable.hpp  tensor.hpp  tensor2.hpp  tensor2_pos.hpp  tensor2_pos_yx.hpp  tensor3.hpp  tensor3_pos.hpp  tensor3_pos_yxz.hpp  tensor5.hpp  tensor5_pos.hpp  tensor_pos.hpp  tensor_shape.hpp  tensor_shape_variable.hpp
include/fdeep/layers/: activation_layer.hpp  adaptive_pooling_3d_layer.hpp  add_layer.hpp  additive_attention_layer.hpp  attention_layer.hpp  average_layer.hpp  average_pooling_2d_layer.hpp  average_pooling_3d_layer.hpp  batch_normalization_layer.hpp  bidirectional_layer.hpp  category_encoding_layer.hpp  celu_layer.hpp  centercrop_layer.hpp  concatenate_layer.hpp  constant_layer.hpp  conv2d_layer.hpp  conv_2d_layer.hpp  conv_2d_transpose_layer.hpp  conv_3d_layer.hpp  conv_3d_transpose_layer.hpp  conv_lstm_2d_layer.hpp  conv_lstm_3d_layer.hpp  cropping_2d_layer.hpp  cropping_3d_layer.hpp  dense_layer.hpp  depthwise_conv_2d_layer.hpp  discretization_layer.hpp  dot_layer.hpp  einsum_dense_layer.hpp  elu_layer.hpp  embedding_layer.hpp  exponential_layer.hpp  flatten_layer.hpp  gelu_layer.hpp  global_average_pooling_1d_layer.hpp  global_average_pooling_2d_layer.hpp  global_average_pooling_3d_layer.hpp  global_max_pooling_1d_layer.hpp  global_max_pooling_2d_layer.hpp  global_max_pooling_3d_layer.hpp  (+64 more)
include/fdeep/llm/: gpt2_bpe.hpp  gpt2_cached.hpp  gpt2_generator.hpp
include/fdeep/tensorflow/: README.md
include/fdeep/tensorflow/core/kernels/: eigen_spatial_convolutions-inl.h
include/frugally_deep/: actication_layer.h  avg_pool_layer.h  construction.h  construction_helpers.h  conv_layer.h  convolution.h  convolution.hpp  convolution_transpose.h  convolution_transpose.hpp  erf_layer.h  filter.h  filter.hpp  frugally_deep.h  frugally_deep.hpp  json.hpp  keras_import.h  keras_import.hpp  layers.h  matrix2d.h  matrix2d_pos.h  matrix2d_pos.hpp  matrix3d.h  matrix3d.hpp  matrix3d_pos.h  max_pool_layer.h  model.h  model.hpp  multi_layer_net.h  node.h  opencv_helpers.h  pool_layer.h  relu_layer.h  shape2.h  shape2.hpp  shape3.h  shape3.hpp  sigmoid_layer.h  size2d.h  size3d.h  softmax_layer.h  (+12 more)
include/frugally_deep/layers/: actication_layer.h  activation_layer.h  activation_layer.hpp  add_layer.hpp  average_pooling_2d_layer.h  average_pooling_2d_layer.hpp  avg_pool_layer.h  batch_normalization_layer.h  batch_normalization_layer.hpp  concatenate_layer.h  concatenate_layer.hpp  conv2d_layer.h  conv2d_layer.hpp  conv2d_transpose_layer.h  conv2d_transpose_layer.hpp  conv_layer.h  convolution_transpose_layer.h  convolutional_layer.h  dense_layer.h  dense_layer.hpp  elu_layer.h  elu_layer.hpp  erf_layer.h  erf_layer.hpp  fast_sigmoid_layer.h  fast_sigmoid_layer.hpp  flatten_layer.h  flatten_layer.hpp  fully_connected_layer.h  gentle_max_pool_layer.h  hard_sigmoid_layer.h  hard_sigmoid_layer.hpp  identity_layer.h  identity_layer.hpp  input_layer.h  input_layer.hpp  layer.h  layer.hpp  leaky_relu_layer.h  leaky_relu_layer.hpp  (+26 more)
keras_export/: convert_model.py  convert_model_tf_keras.py  export_model.py  export_weights.py  generate_test_model.py  generate_test_models.py  lstm.h5  lstm_stateful.h5  save_application_examples.py  save_gpt2_backbone_for_fdeep.py  save_gpt2_weights_bin.py  visualize_layers.py
logo/: fdeep.xcf
script/: auto_format.sh
src/: DeepVideoCompression.cpp  conv_layer.h  conv_net.h  convolution.cpp  convolution.h  filter.cpp  filter.h  layer.h  main.cpp  matrix2d.cpp  matrix2d.h  matrix3d.cpp  matrix3d.h  multi_layer_net.h  opencv_helpers.h  size2d.cpp  size2d.h  size3d.cpp  size3d.h  typedefs.h
src/loaders/: cifar10.h  mnist.h
src/tests/: cifar10.h  golf_ball_quality.h  gradient_check.h  gradient_images.h  keras_import.h  lenna_filter.h  mnist.h  opencv_helpers.h  pharmaceutical_packages.h  test_helpers.h  tiny_imagenet_200.h  upconv_gradient_images.h  variance_inflation_training.h  xor.h
src/tests/loaders/: cifar10.h  mnist.h
test/: CMakeLists.txt  Dockerfile  applications_performance.cpp  readme_example_flat_format_generate.py  readme_example_flat_format_test.cpp  readme_example_generate.py  readme_example_main.cpp  test_model_autoencoder_test.cpp  test_model_convolutional_test.cpp  test_model_embedding_test.cpp  test_model_exhaustive_test.cpp  test_model_extended_test.cpp  test_model_full_test.cpp  test_model_full_test_double.cpp  test_model_gru_stateful_test.cpp  test_model_gru_test.cpp  test_model_lstm_stateful_test.cpp  test_model_lstm_test.cpp  test_model_pooling_test.cpp  test_model_recurrent_test.cpp  test_model_sequential_test.cpp  test_model_small_test.cpp  test_model_variable_test.cpp
test/stateful_test/: .gitignore  readme.md  stateful_recurrent_tests.cpp  stateful_recurrent_tests.py  stateful_recurrent_tests_cpp  temp_bidi_state_in.py  temp_old_bidi_full.py  temp_rnn_results.txt  temp_rnn_test.cpp  temp_rnn_test.py  temp_stateful.h5  temp_stateful.json  temp_stateless.h5  temp_stateless.json
test/stateful_test/tf_behaivor_scripts/: temp_bidi_no_state_in.py  temp_bidi_state_in.cpp  temp_bidi_state_in.py  temp_rnn_test.cpp  temp_rnn_test.py
test_package/: test_package.cpp
